--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-hot-toast": "^2.4.1",
     "react-modal": "^3.16.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
